[package]
name = "learning-embedded-rust"
version = "0.1.0"
authors = ["kinblandford <nawper02@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "learning-embedded-rust"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
avr-device = "0.5.3"
#embedded-rs-lib-arduino = { git = "ssh://github.com/Hyrum-Coleman/embedded-rs-lib-arduino.git", branch = "main" }

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "190f2c3cb8d29e10f71119352b912369dc5a1fb7"
features = ["arduino-mega2560"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
